WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
240608
Web Inspector: Getting style data via WebCore::InspectorCSSAgent::getMatchedStylesForNode for a detached node crashes
https://bugs.webkit.org/show_bug.cgi?id=240608
Summary
Web Inspector: Getting style data via WebCore::InspectorCSSAgent::getMatchedS...
Patrick Angle
Reported
2022-05-18 16:13:44 PDT
<
rdar://93473674
>
Attachments
Add attachment
proposed patch, testcase, etc.
Patrick Angle
Comment 1
2022-05-18 16:54:17 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/755
EWS
Comment 2
2022-05-19 16:43:10 PDT
Committed
r294512
(
250769@main
): <
https://commits.webkit.org/250769@main
> Reviewed commits have been landed. Closing PR #755 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug